# cmakeExample

./: .gitignore  CMakeLists.txt
DucksLibraries/: CMakeLists.txt
DucksLibraries/DuckDecorators/: JumpDuckDecorator.cpp  JumpDuckDecorator.h
DucksLibraries/Ducks/: Duck.h  SimpleDuck.cpp  SimpleDuck.h
DucksSuperProgram/: CMakeLists.txt  main.cpp
